Working movie search without autocomplete

--- a/movie-search/style.css
+++ b/movie-search/style.css
@@ -3,10 +3,29 @@
 }
 
 body {
-	background: #eee;
+	background: #f9f9f9;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 }
+
+h1,
+h2,
+.response-message {
+	font-family: 'Spectral', Georgia, serif;
+}
+
+h1 {
+	font-weight: 600;
+	margin-bottom: 10px;
+	color: #247ba0;
+}
+
+h2 {
+	font-weight: 400;
+	margin-top: 10px;
+	opacity: 0.5;
+}
+
 
 figure {
 	margin: 0;
@@ -34,14 +53,20 @@ input:placeholder {
 }
 
 .container {
-	width: 1000px;
+	width: 100%;
 	margin: 0 auto;
+}
+
+.response-message {
+	margin-top: 50px;
+	font-size: 21px;
+	opacity: 0.7;
 }
 
 .movie-form {
 	display: flex;
 	margin: 0 auto;
-	width: 80%;
+	width: 90%;
 }
 
 .movie-input {
@@ -50,27 +75,30 @@ input:placeholder {
 
 .movie-btn {
 	flex: 1;
+	margin-left: -1px;
 }
 
 .head {
 	text-align: center;
+	z-index: 20;
 }
 
 .movie-input,
 .movie-btn {
 	padding: 10px;
-	border: 1px solid #bbb;
+	border: 1px solid #e2c69a;
+	z-index: 21;
 }
 
 .movie-btn {
-	background-color: #d2f3dd;
+	background-color: #e2c69a;
 }
 
 .movie-output {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: flex-end;
-	margin-top: 20px;
+	margin-top: 30px;
 }
 
 .badge {
@@ -79,8 +107,8 @@ input:placeholder {
 }
 
 .movie-item {
-    flex: 0 0 18%;
-    padding: 1%;
+    flex: 0 0 48%;
+    padding: 7%;
     margin: 1%;
 	box-shadow: 2px 2px 4px lightgray;
 	background-color: white;
@@ -88,7 +116,7 @@ input:placeholder {
 }
 
 .type-movie {
-	background-color: #edf8ff;
+	background-color: #ffffed;
 }
 
 .type-series {
@@ -119,10 +147,11 @@ input:placeholder {
 	margin: 3px 0;
 	position: relative;
 	z-index: 3;
+	font-weight: 600;
 }
 
 .movie-item h3 a {
-	color: #222;
+	color: #444;
 	text-decoration: none;
 	border-bottom: 2px solid transparent;
 }
@@ -157,12 +186,11 @@ input:placeholder {
     opacity: 0.5;
     font-size: 10px;
 }
-}
 
 .plot-spot {
 	height: 200px;
 	margin-top: 0;
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 }
 
@@ -191,4 +219,37 @@ input:placeholder {
 	left: 3px;
 	top: 2px;
 	font-size: 12px;
+}
+
+@media (min-width: 500px) {
+	.movie-form {
+		width: 60%;
+	}
+	.movie-item {
+	    flex: 0 0 31%;
+    	padding: 1%;
+	}
+}
+
+@media (min-width: 800px) {
+	.movie-form {
+		width: 50%;
+	}
+	.movie-item {
+	    flex: 0 0 23%;
+    	padding: 1%;
+	}
+}
+
+@media (min-width: 1100px) {
+	.container {
+		width: 1000px;
+	}
+	.movie-form {
+		width: 40%;
+	}
+	.movie-item {
+	    flex: 0 0 18%;
+    	padding: 1%;
+	}
 }
